--- a/beego/conf/app.conf
+++ b/beego/conf/app.conf
@@ -2,3 +2,8 @@ appname = beego
 httpport = 8080
 runmode = dev
 enableadmin = true
+HttpPort = 9090
+AdminHttpPort = 9099
+sessionon=true
+sessionprovider="file"
+sessionsavepath="./tmp"
